--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -100,7 +100,7 @@ height: 30px;
 
 .card-click-here {
     text-decoration: none !important;
-    color: #9cb3bb !important;
+  
 }
 
 .card-click-here:hover {
@@ -122,7 +122,6 @@ height: 30px;
 }
 
 .col-md {
-    background: #a1d2e6;
  border: 2px solid white;
 }
 
@@ -138,7 +137,6 @@ height: 30px;
 
 .col-md-edit:hover {
     background: #a1d2e68e;
-    cursor: pointer;
 
 }
 section {
@@ -153,12 +151,16 @@ section {
 .project-1 {
 background-image: url('../../Pictures/bouncingball.JPG');
 background-size: cover;
+width: 100%;
+height: 100%;
 }
 
-.project-1:hover {
-    opacity: 0.6;
-    cursor: pointer;
-}
+.project-2 {
+    background-image: url('../../Pictures/changethroughgames.JPG');
+    background-size: cover;
+    }
+    
+    
 
 .project-link {
     color: white !important;
@@ -274,6 +276,7 @@ background-size: cover;
         margin-right: 20px;
         margin-left: 20px;
     }
+
 
     .modal-content {
         width: 80% !important;
